welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: type mismatch;
 found   : Unit
 required: Int
	for(i<-2 to num-1){
             ^